# rlamus

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: module.nix  package.nix
rlamus-cli/: Cargo.toml
rlamus-cli/src/: main.rs
rlamus-core/: Cargo.toml
rlamus-core/src/: delete-split-except.js  embeddings.rs  environ.rs  lib.rs  ollama.rs  scraper.rs
rlamus-core/src/scraper/: compatiblity.rs  mod.rs  reddit.rs  scraper.rs  split-element.js  youtube.rs
rlamus-core/src/scraper/templates/: code-block.md  reddit-comments.md  reddit-post.md  reddit-subreddit.md  youtube-video.md
rlamus-server/: Cargo.toml  openapi.yaml
rlamus-server/src/: args.rs  main.rs  push.rs  shutdown.rs  state.rs
rlamus-server/src/task/: cached_registry.rs  expire.rs  fs_registry.rs  mod.rs
src/: main.rs  ollama.rs  scraper.rs  summarize.rs
