[package]
name = "rlamus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1"
rlamus-core = { path = "../rlamus-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = [
	"tracing",
], default-features = false }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
trait-variant = "0.1.2"
async-stream = "0.3.6"
futures = "0.3.32"
serde_json = "1.0.150"
thiserror = "2.0.18"
smol_str = { version = "0.3.6", features = ["serde"] }
anyhow = "1.0.102"
